sudah di konek sampe 5

--- a/tele/6/settings.json
+++ b/tele/6/settings.json
@@ -7,8 +7,8 @@
   "jika_tidak_mau_terjadi_error": "jangan_ubah_apapun",
   "if_you_don't_want_to_get_an_error": "don't_change_anything",
   
-  "api_id": "800812",
-  "api_hash": "db55ad67a98df35667ca788b97f771f5",
+  "api_id": "3087414",
+  "api_hash": "b82c8544820092e4ab3f17a913520201",
   
   "jumlah_visit": "99",
   "jumlah_msg": "99",
